--- a/0x15-javascript-web_jquery/100-main.html
+++ b/0x15-javascript-web_jquery/100-main.html
@@ -1,1 +1,15 @@
-add
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Holberton School</title>
+    <script type="text/javascript" src="100-script.js"></script>
+  </head>
+  <body>
+    <header> 
+      First HTML page
+    </header>
+    <footer>
+      Holberton School - 2017
+    </footer>
+  </body>
+</html>
